add new Project

--- a/index.html
+++ b/index.html
@@ -217,6 +217,16 @@
                             dolor,</strong> sit amet consectetur adipisicing elit. Doloribus harum accusamus eos provident voluptatem
                         laboriosam unde magni eaque incidunt sint.</p>
                 </div>
+                <div class="mb-10 p-4 md:w-1/2">
+                    <h5 class="font-semibold text-lg text-dark mt-5 mb-2dark:text-white ">WebApp scanner QRcode student licensing with
+                        PHP & MySql</h5>
+                    <div class="rounded-md shadow-md overflow-hidden">
+                        <img src="dist/img/foto2.png" alt="" width="w-full">
+                    </div>
+                    <p align="justify" class="font-medium text-base text-secondary mt-5"><strong class="text-primary">Lorem ipsum
+                            dolor,</strong> sit amet consectetur adipisicing elit. Doloribus harum accusamus eos provident voluptatem
+                        laboriosam unde magni eaque incidunt sint.</p>
+                </div>
             </div>
         </div>
     </section>
