--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <div class="container">
             <div class="flex items-center justify-between relative">
                 <div class="px-4">
-                    <a href="#home" class="font-bold text-primary text-lg flex py-6">
-                        <img src="dist/client/Tailwin.png" width="50px" alt="" srcset=""> MR.</a>
+                    <a href="#home" class="font-bold text-primary text-lg flex py-6">MURTAKI</a>
                 </div>
                 <div class="flex items-center px-4">
                     <button id="hamburger" name="hamburger" type="button" class="block absolute right-4 lg:hidden">
@@ -42,13 +41,13 @@
                                 <a class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white" href="#project">My Projects</a>
                             </li>
                             <li class="group">
-                                <a class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white" href="#client">Clients</a>
+                                <a class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white" href="#client">Technology</a>
                             </li>
-                            <li class="group">
+                            <!-- <li class="group">
                                 <a class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white" href="#blog">My Blogs</a>
-                            </li>
+                            </li> -->
                             <li class="group">
-                                <a class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white" href="#contact">Contact Me</a>
+                                <a class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white" href="https://wa.link/psrt49">Contact Me</a>
                             </li>
                             <li class=" mt-3 lg:mt-0 flex items-center pl-8">
                                 <div class="flex">
@@ -77,10 +76,10 @@
             <div class="flex flex-wrap">
                 <!-- kiri start -->
                 <div class="w-full self-center px-6  lg:px-16 lg:w-1/2 mb-11">
-                    <h1 class="text-base font-semibold text-primary md:text-xl lg:text-2xl">Hello semua <span>👋</span>  My name is <span class="block font-bold text-dark text-3xl mt-1 lg:text-5xl dark:text-white ">Murtaki Shihab</span></h1>
+                    <h1 class="text-base font-semibold text-primary md:text-xl lg:text-2xl">Hai... <span>👋</span>  Nama Saya <span class="block font-bold text-dark text-3xl mt-1 lg:text-5xl dark:text-white ">MURTAKI</span></h1>
                     <h2 class="font-medium text-secondary mb-5">Web Developer <strong class="text-dark font-bold dark:text-white">&</strong> <span class="text-dark dark:text-white">Web Designer</span></h2>
                     <p class="mb-10 font-medium text-slate-400 leading-relaxed">I'am beginner web developer, <span class="text-dark font-bold dark:text-white">let's join with me !</span> </p>
-                    <a href="#" class="text-base font-semibold text-white py-3 px-8 bg-primary rounded-full hover:shadow-lg hover:opacity-80 duration-300 ease-in-out sm:mb-20">Contact Me</a>
+                    <a href="https://wa.link/psrt49" class="text-base font-semibold text-white py-3 px-8 bg-primary rounded-full hover:shadow-lg hover:opacity-80 duration-300 ease-in-out sm:mb-20">Contact Me</a>
                 </div>
                 <!-- kiri end -->
                 <!-- kanan start -->
@@ -106,18 +105,31 @@
         <div class="container">
             <div class="flex flex-wrap">
                 <!-- kiri -->
-                <div class="w-full px-4 mb-10 lg:w-1/2 ">
-                    <h4 class="font-bold uppercase text-primary text-lg mb-3">About Me 👨‍🎓</h4>
-                    <h2 class="font-bold text-dark text-2xl mb-5 max-w-xl lg:text-4xl dark:text-white">I want to tell you <span class="text-primary mb-10">about me </span></h2>
-                    <p align="justify" class="font-medium text-base text-secondary lg:text-lg">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam eos consequatur magnam maxime iure voluptatum optio nostrum, ipsa iusto minima.</p>
+                <div class="w-full px-4 mb-10 lg:w-1/2">
+                    <h4 class="font-bold uppercase text-primary text-lg mb-3">About Me 👨‍💻</h4>
+                    <h2 class="font-bold text-dark text-2xl mb-5 max-w-xl lg:text-4xl dark:text-white">I want to tell you <span
+                            class="text-primary mb-10">about me</span></h2>
+                    <p align="justify" class="font-medium text-base text-secondary lg:text-lg">
+                        Hello! My name is MURTAKI, and I am a passionate web developer with a strong background in building dynamic
+                        and user-friendly websites.
+                        With experience in modern frameworks like Laravel, Vue.js, and React, I specialize in creating responsive
+                        designs and seamless user experiences.
+                        My goal is to help businesses and individuals bring their ideas to life through innovative web solutions.
+                        When I’m not coding, I enjoy exploring the latest tech trends and sharing my knowledge through tutorials.
+                    </p>
                 </div>
+
                 <!-- kanan -->
                 <div class="w-full px-4 lg:w-1/2">
                     <h3 class="font-semibold text-dark text-1xl mb-4 lg:text-3xl lg:pt-10 dark:text-white">Let's join with me in <span class="text-primary">social media !</span></h3>
-                    <p align="justify" class="font-medium text-secondary mb-6 text-base lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, eos unde nam accusamus vero reprehenderit!</p>
+                    <p align="justify" class="font-medium text-secondary mb-6 text-base lg:text-lg">
+                        Discover more about me, my projects, and my journey as a web developer through social media.
+                        I love sharing insights, experiences, and interacting with a community that shares the same interests.
+                        Feel free to reach out and connect with me!
+                    </p>
                     <div class="flex items-center">
                         <!-- Tiktok start-->
-                        <a href="https://www.tiktok.com/@impossiblity.men?lang=id-ID" width="20" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-secondary hover:border-primary hover:text-white hover:bg-primary duration-300 ease-in-out " target="_blank">
+                        <a href="https://www.tiktok.com/@murtaki.99" width="20" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-secondary hover:border-primary hover:text-white hover:bg-primary duration-300 ease-in-out " target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" class="fill-current" height="1em"
                                 viewBox="0 0 448 512">
                                 <path
@@ -135,7 +147,7 @@
                         </a>
                         <!-- Facebokk End -->
                         <!-- Intagram start -->
-                        <a href="https://www.instagram.com/linux._ubuntu/" target="_blank" width="20" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-secondary hover:border-primary hover:text-white hover:bg-primary duration-300 ease-in-out text-red-600">
+                        <a href="https://www.instagram.com/murtakiii/" target="_blank" width="20" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-secondary hover:border-primary hover:text-white hover:bg-primary duration-300 ease-in-out text-red-600">
                             <svg xmlns="http://www.w3.org/2000/svg" class="fill-current" height="1em"
                                 viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                                 <path
@@ -161,71 +173,72 @@
         <div class="container">
             <div class="w-full px-4">
                 <div class="max-w-xl mx-auto text-center mb-16">
-                    <h3 class="font-semibold text-primary mb-3 uppercase">My Projects</h3>
-                    <h1 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-white">New Projects</h1>
-                    <p align="justify" class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum corrupti illo perferendis, velit explicabo deserunt non recusandae nihil praesentium sapiente!</p>
+                    <h3 class="font-semibold text-primary mb-3 uppercase">Proyek Saya</h3>
+                    <h1 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-white">Proyek Terbaru
+                    </h1>
+                    <p align="justify" class="font-medium text-md text-secondary md:text-lg">
+                        Jelajahi beberapa proyek terbaru saya yang menampilkan solusi web inovatif dan desain kreatif.
+                        Setiap proyek mencerminkan dedikasi saya dalam menciptakan pengalaman yang fungsional, ramah
+                        pengguna, dan
+                        menarik secara visual.
+                        Saya terus berusaha melampaui batas untuk menghasilkan karya yang berdampak dan bermakna.
+                    </p>
                 </div>
             </div>
-            <div class="w-full px-4 flex flex-wrap justify-center">
-                <!-- Project 1 -->
+            <div class="w-full px-4 flex flex-wrap justify-center project-container">
+                <!-- Project 1 with Carousel -->
                 <div class="mb-10 p-4 md:w-1/2">
-                    <h5 class="font-semibold text-lg text-dark mt-5 mb-2 dark:text-white">Portfolio with tailwindcss</h5>
-                    <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="dist/img/p1.png" alt="" width="w-full">
+                    <h5 class="font-semibold text-lg text-dark mt-5 mb-2 dark:text-white">Web Portfolio dengan TailwindCSS</h5>
+                    <div class="relative rounded-md shadow-md overflow-hidden carousel">
+                        <div class="carousel-wrapper overflow-hidden">
+                            <div class="carousel-slides flex transition-transform">
+                                <div class="carousel-item flex-none w-full">
+                                    <img src="dist/img/porfolio/1.png" alt="Slide 1" class="w-full">
+                                </div>
+                                <div class="carousel-item flex-none w-full">
+                                    <img src="dist/img/porfolio/2.png" alt="Slide 2" class="w-full">
+                                </div>
+                            </div>
+                        </div>
+                        <button
+                            class="prev-button absolute top-1/2 -translate-y-1/2 left-2 bg-gray-800 text-white p-2 rounded-full hover:bg-gray-700">
+                            &#10094;
+                        </button>
+                        <button
+                            class="next-button absolute top-1/2 -translate-y-1/2 right-2 bg-gray-800 text-white p-2 rounded-full hover:bg-gray-700">
+                            &#10095;
+                        </button>
                     </div>
-                    <p align="justify" class="font-medium text-base text-secondary mt-5"><strong class="text-primary">Lorem ipsum
-                            dolor,</strong> sit amet consectetur adipisicing elit. Doloribus harum accusamus eos provident voluptatem
-                        laboriosam unde magni eaque incidunt sint.</p>
                 </div>
                 <!-- Project 2 -->
                 <div class="mb-10 p-4 md:w-1/2">
-                    <h5 class="font-semibold text-lg text-dark mt-5 mb-2 dark:text-white">Website Postinger with Laravel 9</h5>
-                    <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="dist/img/p2.png" alt="" width="w-full">
+                    <h5 class="font-semibold text-lg text-dark mt-5 mb-2 dark:text-white">Web Madrasah Tsanawaiyah Pondok Pesantren Almunawwaroh</h5>
+                    <div class="relative rounded-md shadow-md overflow-hidden carousel">
+                        <div class="carousel-wrapper overflow-hidden">
+                            <div class="carousel-slides flex transition-transform">
+                                <div class="carousel-item flex-none w-full">
+                                    <img src="dist/img/mtss/mts1.png" alt="Slide 1" class="w-full">
+                                </div>
+                                <div class="carousel-item flex-none w-full">
+                                    <img src="dist/img/mtss/mts2.png" alt="Slide 2" class="w-full">
+                                </div>
+                                <div class="carousel-item flex-none w-full">
+                                    <img src="dist/img/mtss/mts3.png" alt="Slide 2" class="w-full">
+                                </div>
+                                <div class="carousel-item flex-none w-full">
+                                    <img src="dist/img/mtss/mts4.png" alt="Slide 2" class="w-full">
+                                </div>
+                            </div>
+                        </div>
+                        <button
+                            class="prev-button absolute top-1/2 -translate-y-1/2 left-2 bg-gray-800 text-white p-2 rounded-full hover:bg-gray-700">
+                            &#10094;
+                        </button>
+                        <button
+                            class="next-button absolute top-1/2 -translate-y-1/2 right-2 bg-gray-800 text-white p-2 rounded-full hover:bg-gray-700">
+                            &#10095;
+                        </button>
                     </div>
-                    <p align="justify" class="font-medium text-base text-secondary mt-5"><strong class="text-primary">Lorem ipsum
-                            dolor,</strong> sit amet consectetur adipisicing elit. Doloribus harum accusamus eos provident voluptatem
-                        laboriosam unde magni eaque incidunt sint.</p>
-                </div>
-                <!-- Project 3 -->
-                <div class="mb-10 p-4 md:w-1/2">
-                    <h5 class="font-semibold text-lg text-dark mt-5 mb-2 dark:text-white">Website App with Laravel 8</h5>
-                    <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="dist/img/p3.png" alt="" width="w-full">
-                    </div>
-                    <p align="justify" class="font-medium text-base text-secondary mt-5"><strong class="text-primary">Lorem ipsum
-                            dolor,</strong> sit amet consectetur adipisicing elit. Doloribus harum accusamus eos provident voluptatem
-                        laboriosam unde magni eaque incidunt sint.</p>
-                </div>
-                <!-- Project 4 -->
-                <div class="mb-10 p-4 md:w-1/2">
-                    <h5 class="font-semibold text-lg text-dark mt-5 mb-2 dark:text-white">Admin Dashboard with Laravel 9</h5>
-                    <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="dist/img/p4.png" alt="" width="w-full">
-                    </div>
-                    <p align="justify" class="font-medium text-base text-secondary mt-5"><strong class="text-primary">Lorem ipsum
-                            dolor,</strong> sit amet consectetur adipisicing elit. Doloribus harum accusamus eos provident voluptatem
-                        laboriosam unde magni eaque incidunt sint.</p>
-                </div>
-                <!-- project 5 -->
-                <div class="mb-10 p-4 md:w-1/2">
-                    <h5 class="font-semibold text-lg text-dark mt-5 mb-2dark:text-white ">WebApp scanner QRcode student licensing with PHP & MySql</h5>
-                    <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="dist/img/p5.png" alt="" width="w-full">
-                    </div>
-                    <p align="justify" class="font-medium text-base text-secondary mt-5"><strong class="text-primary">Lorem ipsum
-                            dolor,</strong> sit amet consectetur adipisicing elit. Doloribus harum accusamus eos provident voluptatem
-                        laboriosam unde magni eaque incidunt sint.</p>
-                </div>
-                <div class="mb-10 p-4 md:w-1/2">
-                    <h5 class="font-semibold text-lg text-dark mt-5 mb-2dark:text-white ">WebApp scanner QRcode student licensing with
-                        PHP & MySql</h5>
-                    <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="dist/img/foto2.png" alt="" width="w-full">
-                    </div>
-                    <p align="justify" class="font-medium text-base text-secondary mt-5"><strong class="text-primary">Lorem ipsum
-                            dolor,</strong> sit amet consectetur adipisicing elit. Doloribus harum accusamus eos provident voluptatem
-                        laboriosam unde magni eaque incidunt sint.</p>
                 </div>
             </div>
         </div>
